; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/kbdfans/kbd8x/extr_kbd8x.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/kbdfans/kbd8x/extr_kbd8x.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_NUM_LOCK = common dso_local global i32 0, align 4
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@USB_LED_SCROLL_LOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_NUM_LOCK, align 4
  %5 = shl i32 1, %4
  %6 = and i32 %3, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 (...) @num_led_on()
  br label %12

10:                                               ; preds = %1
  %11 = call i32 (...) @num_led_off()
  br label %12

12:                                               ; preds = %10, %8
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %15 = shl i32 1, %14
  %16 = and i32 %13, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = call i32 (...) @caps_led_on()
  br label %22

20:                                               ; preds = %12
  %21 = call i32 (...) @caps_led_off()
  br label %22

22:                                               ; preds = %20, %18
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %25 = shl i32 1, %24
  %26 = and i32 %23, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %22
  %29 = call i32 (...) @scroll_led_on()
  br label %32

30:                                               ; preds = %22
  %31 = call i32 (...) @scroll_led_off()
  br label %32

32:                                               ; preds = %30, %28
  %33 = load i32, i32* %2, align 4
  %34 = call i32 @led_set_user(i32 %33)
  ret void
}

declare dso_local i32 @num_led_on(...) #1

declare dso_local i32 @num_led_off(...) #1

declare dso_local i32 @caps_led_on(...) #1

declare dso_local i32 @caps_led_off(...) #1

declare dso_local i32 @scroll_led_on(...) #1

declare dso_local i32 @scroll_led_off(...) #1

declare dso_local i32 @led_set_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
